Fix the sizing issue the video had on small devices by adding a min-width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,6 +163,10 @@ h1 {
     margin-top: 20px;
 }
 
+.video .instagram-media {
+    min-width: 200px !important;
+}
+
 .pack-box1 i, .pack-box2 i {
     font-size: 60px;
     padding: 15px;
